--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.49.3",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
