--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.3.4",
     "firebase": "^10.7.2",
     "firestore": "^1.1.6",
+    "framer-motion": "^11.0.3",
     "install": "^0.13.0",
     "npm": "^10.3.0",
     "react": "^18.2.0",
