--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
+    "@reduxjs/toolkit": "^2.1.0",
     "firebase": "^10.7.2",
     "firestore": "^1.1.6",
     "framer-motion": "^11.0.3",
