--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "my-church-web",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://emiraell.github.io/my-church-web",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tailwindcss": "tailwindcss -i src/index.css -o src/App.css --watch"
@@ -42,6 +45,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
